@@ -133,7 +133,6 @@
     "print_context"
     "print_defn_rules"
     "print_dependencies"
-    "print_drafts"
     "print_facts"
     "print_induct_rules"
     "print_interps"
@@ -302,7 +301,6 @@
     "print_context"
     "print_defn_rules"
     "print_dependencies"
-    "print_drafts"
     "print_facts"
     "print_induct_rules"
     "print_interps"
