@@ -188,7 +188,6 @@
     "print_context"
     "print_defn_rules"
     "print_dependencies"
-    "print_drafts"
     "print_facts"
     "print_induct_rules"
     "print_inductives"
@@ -417,7 +416,6 @@
     "print_context"
     "print_defn_rules"
     "print_dependencies"
-    "print_drafts"
     "print_facts"
     "print_induct_rules"
     "print_inductives"
